# solar-circuit-monorepo

./: .coverage  .coverage.wandromen25l.10923.XLOWjnox  .coverage.wandromen25l.10923.XXINHZvx  .env  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlint.yaml.backup  .markdownlintignore  GEMINI.md  h origin main  pytest.ini
projects/solar_circuit/: .coverage  .coveragerc  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
projects/solar_circuit/.gemini/: settings.json
projects/solar_circuit/.github/workflows/: ci.yml
projects/solar_circuit/collaboration/design_docs/: 001_Week 0_Improvements_plan.md  002_workorder.md  003_workorder.md  007_work_report_summary.md  008_work_report_for_chat_wo.md  WO-20250709-007_workorder.md  WO-20250709-008_workorder.md  WO-20250709-012_workorder.md  WO-20250709-015_workorder.md
projects/solar_circuit/collaboration/discussions/: 001_help.md  002_help.md
projects/solar_circuit/docs/solar_circuit/: 00_vision.md  01_plan_solo_edition.md  02_context_engineering.md  03_dev_setup.md  04_workflow.md
projects/solar_circuit/scripts/: report_generator.py
projects/solar_circuit/solar_circuit/: cli.py  report_generator.py
projects/solar_circuit/solar_circuit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/solar_circuit/templates/: report_template.md  workorder_template.json
projects/solar_circuit/tests/: conftest.py  test_cli.py  test_cli_commit.py  test_cli_error.py  test_cli_hello.py  test_cli_plan.py  test_cli_report.py  test_orchestrator.py  test_report_generator.py
(+71 files in other folders)
