[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-circuit"
version = "0.1.0"
dependencies = ["typer"]
[project.scripts]
sc = "solar_circuit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solar_circuit*"]
exclude = ["logs", "rounds", "workorders", "collaboration"]